--- a/Index.html
+++ b/Index.html
@@ -1,50 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayanda Maphanga - Portfolio</title>
-            </head>
-            <body>
-                <header>
-                <h1>Hello, I'm Ayanda Maphanga</h1>
-                <p>Welcome to my portfolio website! Glad to have you here.</p> 
-                </header>
+ <!DOCTYPE html>
+     <html lang="en">
+         <head>
+         <meta charset="UTF-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                      <title>Ayanda Maphanga - Portfolio</title>
+                                <link rel="stylesheet" href="style.css"        >
+                                  </head>
+                                         <body>
+                                 <header>
+                                         <h1>Hello, I'm Ayanda Maphanga</h1>
+                                             <p>Welcome to my portfolio website! Glad to have you here.</p> 
+                                    </header>
 
-                <section class="about">
-                    <h2>About Me</h2>
-                    <p>
-                        Hi, I'm Ayanda Maphanga — a creative and analytical thinker with a background in Industrial Engineering and a growing passion for technology, design, and digital innovation.<br>Currently, I'm studying at the FNB App Academy to become a skilled app developer, where I'm building hands-on experience in software development.<br>My journey into tech is backed by a strong foundation in process optimization, data analysis, and workflow design gained through my work at Transnet Port Terminals and Transnet Engineering.<br>In addition to coding, I have a keen eye for design and a solid understanding of UI/UX principles.<br>I also enjoy creating clean, impactful logos and interfaces that enhance user experience and bring ideas to life visually. Whether it's mapping out a user journey, designing a sleek logo, or coding a new app feature, I bring a mindset of innovation, curiosity, and continuous improvement.<br>This portfolio is a reflection of my skills, growth, and commitment to building solutions that are not only functional—but also intuitive and engaging.<br>Let's connect and create something impactful!
-                    </p>
-                </section>
-                
-                <section class="projects">
-                    <h2>My Projects</h2>
-                    <ul>
-                        <li>
-                            <h3>Project 1: Personal Portfolio</h3>
-                            <p>A responsive portfolio website showcasing my skills and projects.</p>
-                        </li>
-                        <li>
-                            <h3>Project 2: E-commerce Website</h3>
-                            <p>An online store built with modern web technologies, featuring a user-friendly interface.</p>
-                        </li>
-                        <li>
-                            <h3>Project 3: Blogging Platform</h3>
-                            <p>A platform for users to create and share their blogs, with a focus on community engagement.</p>
-                        </li>
-                        <li>
-                            <h3>Project 4: Mobile App Development</h3>
-                            <p>A mobile application designed to help users track their fitness goals and progress.</p>
-                        </li>
-                    </ul>
+                                       <section class="about" id="about">
+                                         <h2>About Me</h2>
+                                            <p>
+                                               Hi, I'm Ayanda Maphanga — a creative and analytical thinker with a background in Industrial Engineering and a growing passion for technology, design, and digital innovation.<br>Currently, I'm studying at the FNB App Academy to become a skilled app developer, where I'm building hands-on experience in software development.<br>My journey into tech is backed by a strong foundation in process optimization, data analysis, and workflow design gained through my work at Transnet Port Terminals and Transnet Engineering.<br>In addition to coding, I have a keen eye for design and a solid understanding of UI/UX principles.<br>I also enjoy creating clean, impactful logos and interfaces that enhance user experience and bring ideas to life visually. Whether it's mapping out a user journey, designing a sleek logo, or coding a new app feature, I bring a mindset of innovation, curiosity, and continuous improvement.<br>This portfolio is a reflection of my skills, growth, and commitment to building solutions that are not only functional—but also intuitive and engaging.<br>Let's connect and create something impactful!
+                                            </p>
+                                        </section>
+                                                    
+                                                    <section class="projects">
+                                                        <h2>My Projects</h2>
+                                                        <ul>
+                                                            <li>
+                                                                <h3>Project 1: Personal Portfolio</h3>
+                                                                <p>A responsive portfolio website showcasing my skills and projects.</p>
+                                                            </li>
+                                                            <li>
+                                                                <h3>Project 2: E-commerce Website</h3>
+                                                                <p>An online store built with modern web technologies, featuring a user-friendly interface.</p>
+                                                            </li>
+                                                            <li>
+                                                                <h3>Project 3: Blogging Platform</h3>
+                                                                <p>A platform for users to create and share their blogs, with a focus on community engagement.</p>
+                                                            </li>
+                                                            <li>
+                                                                <h3>Project 4: Mobile App Development</h3>
+                                                                <p>A mobile application designed to help users track their fitness goals and progress.</p>
+                                                            </li>
+                                                        </ul>
 
-                </section>
+                                                    </section>
 
-                <footer>
-                    <h2>Contact Me</h2>
-                    <p>If you'd like to get in touch, feel free to reach out via email at ayandamaphang390@gmail.com </p>
-                    <p>or connect with me on <a href="https://www.linkedin.com/in/ayanda-maphanga-123456789/">LinkedIn</a>.</p>
-                </footer>
-            </body>
-            </html>
+                                                    <footer>
+                                                        <h2>Contact Me</h2>
+                                                        <p>If you'd like to get in touch, feel free to reach out via email at ayandamaphang390@gmail.com </p>
+                                                        <p>or connect with me on <a href="https://www.linkedin.com/in/ayanda-maphanga-123456789/">LinkedIn</a>.</p>
+                                                    </footer>
+                                                </body>
+                                                </html>
